# edgedb-query

./: .pylintrc  LICENSE  README.md  pyproject.toml  setup.cfg
src/edgedbquery/: __init__.py
