[metadata]
name = edgedbquery
version = 0.0.1
author = Vitaliy Grusha
author_email = vit.grusha@gmail.com
description = Simple wrapper for edgedb client with pydantic
long_description = file: README.md
long_description_content_type = text/markdown


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    ujson>=5.1.0
    pydantic>=1.9.0
    edgedb>=0.23.0

[options.packages.find]
where = src